--- a/csv-indexed.cabal
+++ b/csv-indexed.cabal
@@ -34,8 +34,8 @@ library
   cc-options: -O2 -std=c++14
   extra-libraries: stdc++ pthread
   exposed-modules:
-      Lib
-    , Indexer
+      Indexer
+    , Csv.Indexed
   other-modules:
       Paths_csv_indexed
   hs-source-dirs:
@@ -64,6 +64,7 @@ executable csv-indexed-exe
     , csv-indexed
     , bytestring
     , cassava
+    , random
     , vector
   default-language: Haskell2010
 
